--- a/css/style.css
+++ b/css/style.css
@@ -275,6 +275,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 86px;
 }
 .quiz .quiz__action .action__left {
   width: 898px;
@@ -282,9 +283,67 @@
   border-radius: 0px 10px 10px 0px;
   margin-right: 41px;
   display: flex;
-  justify-content: center;
   align-items: center;
+  flex-direction: column;
   padding: 130px 0 32px 0;
+  position: relative;
+}
+.quiz .quiz__action .action__left .progress_bar {
+  display: flex;
+  width: 815px;
+  position: absolute;
+  top: 30px;
+  left: 0;
+}
+.quiz .quiz__action .action__left .progress_bar .step {
+  position: absolute;
+}
+.quiz .quiz__action .action__left .progress_bar .step img {
+  display: inline-block;
+}
+.quiz .quiz__action .action__left .progress_bar .step::before, .quiz .quiz__action .action__left .progress_bar .step::after {
+  content: "";
+  position: absolute;
+  height: 22px;
+  width: 120px;
+  background: linear-gradient(180deg, #CFD5D9 0%, #F7F7F7 32.91%, #4D4D4D 71.97%, #CFCFCF 100%);
+  top: -46px;
+  left: 0;
+}
+.quiz .quiz__action .action__left .progress_bar .step::after {
+  background: linear-gradient(180deg, #8CBADF 0%, #C5E5FF 32.91%, #0B69B3 71.97%, #84C6FB 100%);
+  transform: scaleX(0);
+  -webkit-animation: animate 0.3s linear forwards;
+          animation: animate 0.3s linear forwards;
+  transform-origin: left;
+}
+@-webkit-keyframes animate {
+  100% {
+    transform: scaleX(1);
+  }
+}
+@keyframes animate {
+  100% {
+    transform: scaleX(1);
+  }
+}
+.quiz .quiz__action .action__left .progress_bar .step:first-child::before {
+  background: linear-gradient(180deg, #8CBADF 0%, #C5E5FF 32.91%, #0B69B3 71.97%, #84C6FB 100%);
+}
+.quiz .quiz__action .action__left .progress_bar .step:last-child {
+  left: 720px;
+  top: -109px;
+}
+.quiz .quiz__action .action__left .progress_bar .step:last-child:after {
+  content: none;
+}
+.quiz .quiz__action .action__left .progress_bar .step:last-child::before {
+  content: none;
+}
+.quiz .quiz__action .action__left .progress_bar .step .step_check {
+  position: absolute;
+  top: 0;
+  display: none;
 }
 .quiz .quiz__action .action__left .form-outer {
   width: 100%;
@@ -293,14 +352,15 @@
 .quiz .quiz__action .action__left .form-outer form {
   display: flex;
   align-items: center;
-  width: 400%;
+  width: 600%;
   margin-left: 10%;
 }
 .quiz .quiz__action .action__left .form-outer form .page {
   background: #FFFFFF;
   border-radius: 8px;
-  width: 20%;
-  margin-right: 15%;
+  width: 14%;
+  margin-right: 3%;
+  transition: margin-left 0.3s ease-in-out;
 }
 .quiz .quiz__action .action__left .form-outer form .page .title {
   padding: 28px 0 0 32px;
