--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100%;
     font-family: 'Inter', sans-serif;
+    overflow: hidden;
 }
 
 .container {
@@ -270,14 +271,18 @@
                             margin-left: 8px;
                             display: inline-block;
 
-                            &::after {
-                                content: '\f067';
-                                font-size: 16px;
-                                font-family: "Font Awesome 5 Free";
-                                color: black;
-                                margin-right: 4px;
-                                display: inline-block;
-                            }
+                            // &::after {
+                            //     content: '\f067';
+                            //     font-size: 16px;
+                            //     font-family: "Font Awesome 5 Free";
+                            //     color: black;
+                            //     margin-right: 4px;
+                            //     display: inline-block;
+                            // }
+                        }
+
+                        .down_caret {
+                            margin-left: 70px;
                         }
                     }
 
@@ -404,6 +409,26 @@
                         }
                     }
 
+                    &:nth-child(2) {
+                        left: 120px;
+                    }
+
+                    &:nth-child(3) {
+                        left: 240px;
+                    }
+
+                    &:nth-child(4) {
+                        left: 360px;
+                    }
+
+                    &:nth-child(5) {
+                        left: 480px;
+                    }
+
+                    &:nth-child(6) {
+                        left: 600px;
+                    }
+
                     &:last-child {
                         left: 720px;
                         top: -109px;
@@ -459,6 +484,7 @@
                         width: 14%;
                         margin-right: 3%;
                         transition: margin-left 0.3s ease-in-out;
+                        z-index: 100000;
 
                         .title {
                             padding: 28px 0 0 60px;
@@ -526,7 +552,7 @@
                                 border-radius: 78px;
                                 padding: 16px 20px;
                                 margin-top: 14px;
-                                display: flex;
+                                display: inline-block;
                                 align-items: center;
                                 transition: .3s;
                                 outline: none;
@@ -548,6 +574,7 @@
                                 background: linear-gradient(180deg, #E6E6E6 0%, #B6B6B6 100%);
                                 box-shadow: 0px 6.6501px 12.1697px rgba(108, 108, 108, 0.238297);
                                 border-radius: 78px;
+                                display: inline-block;
 
                                 img {
                                     transform: rotate(-180deg);
@@ -560,8 +587,82 @@
                             width: 90%;
                             margin-left: 32px;
 
+
                             &:nth-child(odd) {
                                 margin-left: 32px;
+                            }
+                        }
+                    }
+
+                    .last_page {
+                        // width: 10%;
+                        // margin-left: 116px;
+                        position: relative;
+                        z-index: 2;
+
+                        img {
+                            position: absolute;
+                            left: -255px;
+                            z-index: -1;
+                            display: inline-block;
+                        }
+
+                        .title {
+                            text-align: left;
+                            padding-left: 32px;
+
+                            .title__text {
+                                font-family: Inter;
+                                font-style: normal;
+                                font-weight: bold;
+                                font-size: 18px;
+                                line-height: 22px;
+
+                                span {
+                                    color: #FF1D0F;
+                                }
+                            }
+                        }
+
+                        .check {
+                            font-weight: 500;
+                            font-size: 14px;
+                            line-height: 130%;
+                            color: #202020;
+                            border: none;
+                            z-index: 10;
+
+                            span {
+                                font-weight: 700;
+                            }
+
+                            .input_form {
+                                display: flex;
+                                flex-direction: column-reverse;
+                                align-items: flex-start;
+
+                                .text__info {
+                                    font-weight: 500;
+                                    font-size: 14px;
+                                    line-height: 130%;
+                                    color: #000000;
+                                }
+
+                                input {
+                                    background: #FFFFFF;
+                                    border: 1px solid #4A4060;
+                                    box-sizing: border-box;
+                                    border-radius: 6px;
+                                    padding: 12px 20px;
+                                }
+                            }
+                        }
+
+                        .field {
+                            button {
+                                margin-left: -295px;
+                                padding: 27px 32px;
+                                margin-top: 6px;
                             }
                         }
                     }
@@ -673,6 +774,140 @@ footer {
             font-size: 12px;
             line-height: 130%;
             color: #393E43;
+        }
+    }
+}
+
+.popup {
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(0deg, rgba(1, 111, 158, 0.4), rgba(1, 111, 158, 0.4));
+    top: 0;
+    left: 0;
+    transition: all 0.5s ease-in;
+    cursor: pointer;
+    z-index: 100;
+
+    .popup__body {
+        min-height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 30px 10px;
+
+        .popup__content {
+            background: #FFFFFF;
+            border-radius: 10px;
+            width: 641px;
+            height: 421px;
+            padding: 0 30px 30px 30px;
+            position: relative;
+            animation-name: animatrix;
+            animation-duration: 0.4s;
+            cursor: default;
+
+            @keyframes animatrix {
+                from {
+                    top: -900px;
+                    opacity: 0;
+                }
+
+                to {
+                    top: 0;
+                    opacity: 1;
+                }
+            }
+
+            .popup__close {
+                position: absolute;
+                top: 13px;
+                right: 13px;
+                text-decoration: none;
+                font-size: 30px;
+                color: black;
+
+                &:hover {
+                    color: #D74C4C;
+                }
+
+            }
+
+            .popup__title {
+                text-align: center;
+                font-weight: 600;
+                font-size: 26px;
+                line-height: 31px;
+                color: #000000;
+                margin-top: 42px;
+            }
+
+            form {
+                width: 500px;
+                margin: 42px auto 0;
+
+                input[type="text"] {
+                    display: block;
+                    width: 100%;
+                    border: 1px solid #4A4060;
+                    padding: 20px;
+                    text-align: left;
+                    color: black;
+                    outline: none;
+                    margin-bottom: 32px;
+                    background: #FFFFFF;
+                    border-radius: 6px;
+
+                    &::placeholder {
+                        padding: 12px 0 12px 0px;
+                    }
+                }
+
+                input[type="submit"] {
+                    font-family: Inter;
+                    font-style: normal;
+                    font-weight: 600;
+                    font-size: 14px;
+                    line-height: 130%;
+                    text-align: center;
+                    text-transform: uppercase;
+                    color: #FFFFFF;
+                    background: linear-gradient(180deg, #6FBAFF 0%, #316FE7 100%);
+                    box-shadow: 0px 22.3363px 40.8754px rgba(18, 53, 86, 0.351703), 0px 6.6501px 12.1697px rgba(18, 53, 86, 0.238297);
+                    border-radius: 78px;
+                    padding: 16px 32px;
+                    margin-top: 14px;
+                    display: inline-block;
+                    transition: .3s;
+                    position: relative;
+                    outline: none;
+                    border: none;
+                    cursor: pointer;
+
+                    &:hover {
+                        background: linear-gradient(180deg, #6FD4FF 0%, #387BFE 100%);
+                        box-shadow: 0px 22.3363px 40.8754px rgba(23, 94, 161, 0.351703), 0px 6.6501px 12.1697px rgba(18, 53, 86, 0.238297);
+                        border-radius: 78px;
+                    }
+
+                }
+            }
+
+            .popup_rules {
+                margin: 32px auto 0;
+                text-align: center;
+
+                .rules_text {
+                    font-size: 12px;
+                    line-height: 140%;
+                    color: #909090;
+                }
+
+                .rules_link {
+                    color: #0062AE;
+                }
+            }
         }
     }
 }
