--- a/css/style.css
+++ b/css/style.css
@@ -379,7 +379,6 @@
   width: 14%;
   margin-right: 3%;
   transition: margin-left 0.3s ease-in-out;
-  z-index: 100000;
 }
 .quiz .quiz__action .action__left .form-outer form .page .title {
   padding: 28px 0 0 60px;
@@ -505,6 +504,9 @@
 .quiz .quiz__action .action__left .form-outer form .last_page .check span {
   font-weight: 700;
 }
+.quiz .quiz__action .action__left .form-outer form .last_page .check .field__radio {
+  border: none;
+}
 .quiz .quiz__action .action__left .form-outer form .last_page .check .input_form {
   display: flex;
   flex-direction: column-reverse;
@@ -524,7 +526,7 @@
   padding: 12px 20px;
 }
 .quiz .quiz__action .action__left .form-outer form .last_page .field button {
-  margin-left: -295px;
+  margin-left: -26px;
   padding: 27px 32px;
   margin-top: 6px;
 }
@@ -594,7 +596,7 @@
 }
 .quiz .quiz__action .action__right .right_well img {
   display: inline-block;
-  margin: 12px 0 16px 16px;
+  margin: 12px auto;
 }
 
 footer .container {
@@ -613,6 +615,158 @@ footer .container .footer__right {
   font-size: 12px;
   line-height: 130%;
   color: #393E43;
+}
+
+.mobile__footer {
+  display: none;
+  position: relative;
+  bottom: 0;
+}
+.mobile__footer .button .main_img {
+  position: relative;
+}
+.mobile__footer .button .main_img img {
+  width: 100%;
+}
+
+.mobile_popup {
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(0deg, rgba(1, 111, 158, 0.4), rgba(1, 111, 158, 0.4));
+  top: 0;
+  left: 0;
+  transition: all 0.5s ease-in;
+  cursor: pointer;
+  z-index: 100;
+}
+.mobile_popup .mobile_popup__body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100%;
+  padding: 30px 10px;
+}
+.mobile_popup .mobile_popup__body .mobile_popup__content {
+  border-radius: 10px;
+  width: auto;
+  height: auto;
+  position: relative;
+  -webkit-animation-name: drop;
+          animation-name: drop;
+  -webkit-animation-duration: 0.4s;
+          animation-duration: 0.4s;
+  cursor: default;
+  background-color: white;
+  padding: 20px;
+}
+@-webkit-keyframes drop {
+  from {
+    bottom: -900px;
+    opacity: 0;
+  }
+  to {
+    bottom: 0;
+    opacity: 1;
+  }
+}
+@keyframes drop {
+  from {
+    bottom: -900px;
+    opacity: 0;
+  }
+  to {
+    bottom: 0;
+    opacity: 1;
+  }
+}
+.mobile_popup .mobile_popup__body .mobile_popup__content .old_man {
+  position: absolute;
+  top: -175px;
+  left: 35px;
+  transform: rotate(5.5deg);
+  display: none;
+}
+.mobile_popup .mobile_popup__body .mobile_popup__content .right_old_man {
+  height: auto;
+  width: 308px;
+  margin-bottom: 20px;
+  background: #F5F4F0;
+  padding-bottom: 16px;
+}
+.mobile_popup .mobile_popup__body .mobile_popup__content .right_old_man h3 {
+  padding: 15px 0 0 15px;
+  margin-top: 0;
+  color: #D41212;
+  margin-bottom: 0;
+}
+.mobile_popup .mobile_popup__body .mobile_popup__content .right_old_man h3 span {
+  color: black;
+}
+.mobile_popup .mobile_popup__body .mobile_popup__content .right_old_man .old_man_list {
+  list-style: none;
+  padding: 12px 0 0 16px;
+  margin-top: 0;
+}
+.mobile_popup .mobile_popup__body .mobile_popup__content .right_old_man .old_man_list .old_man_item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 12px;
+}
+.mobile_popup .mobile_popup__body .mobile_popup__content .right_old_man .old_man_list .old_man_item:last-child {
+  margin-bottom: 0;
+}
+.mobile_popup .mobile_popup__body .mobile_popup__content .right_old_man .old_man_list .old_man_item img {
+  color: #2A7DEB;
+}
+.mobile_popup .mobile_popup__body .mobile_popup__content .right_old_man .old_man_list .old_man_item span {
+  font-size: 12px;
+  line-height: 170%;
+  color: #000000;
+  display: inline-block;
+  margin-left: 8px;
+}
+.mobile_popup .mobile_popup__body .mobile_popup__content .right_well {
+  background: #F5F4F0;
+  border-radius: 6px;
+  width: 310px;
+}
+.mobile_popup .mobile_popup__body .mobile_popup__content .right_well .well_text {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 130%;
+  color: #000000;
+  display: inline-block;
+  margin: 10px 28px 0 28px;
+  width: 250px;
+  text-align: center;
+}
+.mobile_popup .mobile_popup__body .mobile_popup__content .right_well img {
+  display: inline-block;
+  margin: 17px;
+  text-align: center;
+}
+.mobile_popup .mobile_popup__body .continue_button {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 130%;
+  text-align: center;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  text-decoration: none;
+  background: linear-gradient(180deg, #6FBAFF 0%, #316FE7 100%);
+  box-shadow: 0px 22.3363px 40.8754px rgba(18, 53, 86, 0.351703), 0px 6.6501px 12.1697px rgba(18, 53, 86, 0.238297);
+  border-radius: 78px;
+  padding: 16px 72px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  display: inline-block;
+  align-items: center;
+  transition: 0.3s;
+  outline: none;
+  border: none;
+  cursor: pointer;
 }
 
 .popup {
