--- a/sass/media.scss
+++ b/sass/media.scss
@@ -632,6 +632,83 @@
                                 }
                             }
                         }
+
+                        .last_page {
+                            // width: 10%;
+                            // margin-left: 116px;
+                            position: relative;
+                            z-index: 2;
+
+                            img {
+                                position: absolute;
+                                left: -255px;
+                                z-index: -1;
+                                display: inline-block;
+                            }
+
+                            .title {
+                                text-align: left;
+                                padding-left: 32px;
+
+                                .title__text {
+                                    font-family: Inter;
+                                    font-style: normal;
+                                    font-weight: bold;
+                                    font-size: 18px;
+                                    line-height: 22px;
+
+                                    span {
+                                        color: #FF1D0F;
+                                    }
+                                }
+                            }
+
+                            .check {
+                                font-weight: 500;
+                                font-size: 14px;
+                                line-height: 130%;
+                                color: #202020;
+                                border: none;
+                                z-index: 10;
+
+                                span {
+                                    font-weight: 700;
+                                }
+
+                                .field__radio {
+                                    border: none;
+                                }
+
+                                .input_form {
+                                    display: flex;
+                                    flex-direction: column-reverse;
+                                    align-items: flex-start;
+
+                                    .text__info {
+                                        font-weight: 500;
+                                        font-size: 14px;
+                                        line-height: 130%;
+                                        color: #000000;
+                                    }
+
+                                    input {
+                                        background: #FFFFFF;
+                                        border: 1px solid #4A4060;
+                                        box-sizing: border-box;
+                                        border-radius: 6px;
+                                        padding: 12px 20px;
+                                    }
+                                }
+                            }
+
+                            .field {
+                                button {
+                                    margin-left: -295px;
+                                    padding: 27px 32px;
+                                    margin-top: 6px;
+                                }
+                            }
+                        }
                     }
                 }
             }
@@ -1513,6 +1590,83 @@
 
                                 &:nth-child(odd) {
                                     margin-left: 32px;
+                                }
+                            }
+                        }
+
+                        .last_page {
+                            // width: 10%;
+                            // margin-left: 116px;
+                            position: relative;
+                            z-index: 2;
+
+                            img {
+                                position: absolute;
+                                left: -255px;
+                                z-index: -1;
+                                display: inline-block;
+                            }
+
+                            .title {
+                                text-align: left;
+                                padding-left: 32px;
+
+                                .title__text {
+                                    font-family: Inter;
+                                    font-style: normal;
+                                    font-weight: bold;
+                                    font-size: 18px;
+                                    line-height: 22px;
+
+                                    span {
+                                        color: #FF1D0F;
+                                    }
+                                }
+                            }
+
+                            .check {
+                                font-weight: 500;
+                                font-size: 14px;
+                                line-height: 130%;
+                                color: #202020;
+                                border: none;
+                                z-index: 10;
+
+                                span {
+                                    font-weight: 700;
+                                }
+
+                                .field__radio {
+                                    border: none;
+                                }
+
+                                .input_form {
+                                    display: flex;
+                                    flex-direction: column-reverse;
+                                    align-items: flex-start;
+
+                                    .text__info {
+                                        font-weight: 500;
+                                        font-size: 14px;
+                                        line-height: 130%;
+                                        color: #000000;
+                                    }
+
+                                    input {
+                                        background: #FFFFFF;
+                                        border: 1px solid #4A4060;
+                                        box-sizing: border-box;
+                                        border-radius: 6px;
+                                        padding: 12px 20px;
+                                    }
+                                }
+                            }
+
+                            .field {
+                                button {
+                                    margin-left: -295px;
+                                    padding: 27px 32px;
+                                    margin-top: 6px;
                                 }
                             }
                         }
@@ -2408,6 +2562,83 @@
                                 }
                             }
                         }
+
+                        .last_page {
+                            // width: 10%;
+                            // margin-left: 116px;
+                            position: relative;
+                            z-index: 2;
+
+                            img {
+                                position: absolute;
+                                left: -255px;
+                                z-index: -1;
+                                display: inline-block;
+                            }
+
+                            .title {
+                                text-align: left;
+                                padding-left: 32px;
+
+                                .title__text {
+                                    font-family: Inter;
+                                    font-style: normal;
+                                    font-weight: bold;
+                                    font-size: 18px;
+                                    line-height: 22px;
+
+                                    span {
+                                        color: #FF1D0F;
+                                    }
+                                }
+                            }
+
+                            .check {
+                                font-weight: 500;
+                                font-size: 14px;
+                                line-height: 130%;
+                                color: #202020;
+                                border: none;
+                                z-index: 10;
+
+                                span {
+                                    font-weight: 700;
+                                }
+
+                                .field__radio {
+                                    border: none;
+                                }
+
+                                .input_form {
+                                    display: flex;
+                                    flex-direction: column-reverse;
+                                    align-items: flex-start;
+
+                                    .text__info {
+                                        font-weight: 500;
+                                        font-size: 14px;
+                                        line-height: 130%;
+                                        color: #000000;
+                                    }
+
+                                    input {
+                                        background: #FFFFFF;
+                                        border: 1px solid #4A4060;
+                                        box-sizing: border-box;
+                                        border-radius: 6px;
+                                        padding: 12px 20px;
+                                    }
+                                }
+                            }
+
+                            .field {
+                                button {
+                                    margin-left: -295px;
+                                    padding: 27px 32px;
+                                    margin-top: 6px;
+                                }
+                            }
+                        }
                     }
                 }
             }
@@ -2520,6 +2751,19 @@
                 font-size: 12px;
                 line-height: 130%;
                 color: #393E43;
+            }
+        }
+    }
+
+    .mobile__footer {
+        display: block;
+        position: relative;
+        bottom: 0;
+
+        .button {
+            img {
+                width: 100%;
+                height: 100px;
             }
         }
     }
@@ -3498,6 +3742,19 @@
                 font-size: 12px;
                 line-height: 130%;
                 color: #393E43;
+            }
+        }
+    }
+
+    .mobile__footer {
+        display: block;
+        position: relative;
+        bottom: 0;
+
+        .button {
+            img {
+                width: 100%;
+                height: 100px;
             }
         }
     }
@@ -4504,6 +4761,19 @@
                 font-size: 12px;
                 line-height: 130%;
                 color: #393E43;
+            }
+        }
+    }
+
+    .mobile__footer {
+        display: block;
+        position: relative;
+        bottom: 0;
+
+        .button {
+            img {
+                width: 100%;
+                height: 100px;
             }
         }
     }
