--- a/sass/style.scss
+++ b/sass/style.scss
@@ -484,7 +484,6 @@
                         width: 14%;
                         margin-right: 3%;
                         transition: margin-left 0.3s ease-in-out;
-                        z-index: 100000;
 
                         .title {
                             padding: 28px 0 0 60px;
@@ -636,6 +635,10 @@
                                 font-weight: 700;
                             }
 
+                            .field__radio {
+                                border: none;
+                            }
+
                             .input_form {
                                 display: flex;
                                 flex-direction: column-reverse;
@@ -660,7 +663,7 @@
 
                         .field {
                             button {
-                                margin-left: -295px;
+                                margin-left: -26px;
                                 padding: 27px 32px;
                                 margin-top: 6px;
                             }
@@ -748,7 +751,7 @@
 
                 img {
                     display: inline-block;
-                    margin: 12px 0 16px 16px;
+                    margin: 12px auto;
                 }
             }
         }
@@ -777,6 +780,174 @@ footer {
         }
     }
 }
+
+.mobile__footer {
+    display: none;
+    position: relative;
+    bottom: 0;
+
+    .button {
+        .main_img {
+            position: relative;
+
+            img {
+                width: 100%;
+
+            }
+        }
+    }
+}
+
+.mobile_popup {
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(0deg, rgba(1, 111, 158, 0.4), rgba(1, 111, 158, 0.4));
+    top: 0;
+    left: 0;
+    transition: all 0.5s ease-in;
+    cursor: pointer;
+    z-index: 100;
+
+    .mobile_popup__body {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-height: 100%;
+        padding: 30px 10px;
+
+        .mobile_popup__content {
+            border-radius: 10px;
+            width: auto;
+            height: auto;
+            // padding: 0 30px 30px 30px;
+            position: relative;
+            animation-name: drop;
+            animation-duration: 0.4s;
+            cursor: default;
+            background-color: white;
+            padding: 20px;
+
+            @keyframes drop {
+                from {
+                    bottom: -900px;
+                    opacity: 0;
+                }
+
+                to {
+                    bottom: 0;
+                    opacity: 1;
+                }
+            }
+
+
+            .old_man {
+                position: absolute;
+                top: -175px;
+                left: 35px;
+                transform: rotate(5.5deg);
+                display: none;
+            }
+
+            .right_old_man {
+                height: auto;
+                width: 308px;
+                margin-bottom: 20px;
+                background: #F5F4F0;
+                padding-bottom: 16px;
+
+
+                h3 {
+                    padding: 15px 0 0 15px;
+                    margin-top: 0;
+                    color: #D41212;
+                    margin-bottom: 0;
+
+                    span {
+                        color: black;
+                    }
+                }
+
+
+                .old_man_list {
+                    list-style: none;
+                    padding: 12px 0 0 16px;
+                    margin-top: 0;
+
+                    .old_man_item {
+                        display: flex;
+                        align-items: center;
+                        margin-bottom: 12px;
+
+                        &:last-child {
+                            margin-bottom: 0;
+                        }
+
+                        img {
+                            color: #2A7DEB;
+                        }
+
+                        span {
+                            font-size: 12px;
+                            line-height: 170%;
+                            color: #000000;
+                            display: inline-block;
+                            margin-left: 8px;
+                        }
+                    }
+                }
+            }
+
+            .right_well {
+                background: #F5F4F0;
+                border-radius: 6px;
+                width: 310px;
+
+                .well_text {
+                    font-weight: bold;
+                    font-size: 14px;
+                    line-height: 130%;
+                    color: #000000;
+                    display: inline-block;
+                    margin: 10px 28px 0 28px;
+                    width: 250px;
+                    text-align: center;
+                }
+
+                img {
+                    display: inline-block;
+                    margin: 17px;
+                    text-align: center;
+                }
+            }
+        }
+
+        .continue_button {
+            font-weight: 600;
+            font-size: 14px;
+            line-height: 130%;
+            text-align: center;
+            text-transform: uppercase;
+            color: #FFFFFF;
+            text-decoration: none;
+            background: linear-gradient(180deg, #6FBAFF 0%, #316FE7 100%);
+            box-shadow: 0px 22.3363px 40.8754px rgba(18, 53, 86, 0.351703), 0px 6.6501px 12.1697px rgba(18, 53, 86, 0.238297);
+            border-radius: 78px;
+            padding: 16px 72px;
+            margin-top: 20px;
+            margin-bottom: 20px;
+            display: inline-block;
+            align-items: center;
+            transition: .3s;
+            outline: none;
+            border: none;
+            cursor: pointer;
+        }
+    }
+}
+
+
 
 .popup {
     display: none;
