--- a/css/media.css
+++ b/css/media.css
@@ -281,7 +281,7 @@
   }
   .quiz .quiz__action {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     margin-top: 86px;
   }
@@ -1066,7 +1066,7 @@
   }
   .quiz .quiz__action {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     margin-top: 86px;
   }
@@ -1855,7 +1855,7 @@
   }
   .quiz .quiz__action {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     margin-top: 86px;
   }
@@ -2665,7 +2665,7 @@
   }
   .quiz .quiz__action {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     margin-top: 86px;
   }
@@ -3487,7 +3487,7 @@
   }
   .quiz .quiz__action {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     margin-top: 86px;
   }
