--- a/sass/media.scss
+++ b/sass/media.scss
@@ -345,7 +345,7 @@
 
         .quiz__action {
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
             align-items: center;
             margin-top: 86px;
 
@@ -1311,7 +1311,7 @@
 
         .quiz__action {
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
             align-items: center;
             margin-top: 86px;
 
@@ -2279,7 +2279,7 @@
 
         .quiz__action {
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
             align-items: center;
             margin-top: 86px;
 
@@ -3268,7 +3268,7 @@
 
         .quiz__action {
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
             align-items: center;
             margin-top: 86px;
 
@@ -4282,7 +4282,7 @@
 
         .quiz__action {
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
             align-items: center;
             margin-top: 86px;
 
