--- a/sass/style.scss
+++ b/sass/style.scss
@@ -340,7 +340,7 @@
 
     .quiz__action {
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
         margin-top: 86px;
 
