--- a/css/style.css
+++ b/css/style.css
@@ -269,7 +269,7 @@
 }
 .quiz .quiz__action {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   margin-top: 86px;
 }
